--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+authentication:
+    resource: "@AuthenticationBundle/Resources/config/routing.yml"
+    prefix:   /authentication
+
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
